--- a/source/meson.build
+++ b/source/meson.build
@@ -1,4 +1,5 @@
 # SPDX-License-Identifier: GPL-2.0-only
+# Full license at https://spdx.org/licenses/GPL-2.0.html
 
 exe = executable(meson.project_name(), ['main.c', 'args.c'],
   c_args : ['-DMAIN',
